--- a/styles.css
+++ b/styles.css
@@ -164,6 +164,18 @@ header {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
+.project-card a{
+  text-decoration: none;
+  color: black;
+}
+
+.project-image{
+  width: 10rem;
+    height: 10rem;
+    object-fit: contain;
+    border-radius: 10px;
+}
+
 footer {
   background: #333;
   color: #fff;
