--- a/styles.css
+++ b/styles.css
@@ -8,45 +8,46 @@
 }
 
 body {
-  font-family: Arial, sans-serif;
+  font-family: 'Poppins', sans-serif;
   line-height: 1.6;
+  background-color: #f4f4f4;
+  color: #333;
 }
 
 header {
   background: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  position: sticky;
+  width: 100%;
+  position: fixed;
   top: 0;
-  z-index: 1000;
-}
-
-.navbar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  z-index: 999;
   padding: 1rem 2rem;
 }
 
-.logo {
-    width: 50px;
+.nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
+
+/* This is to test whether it is necessary or not? */
+/* .logo {
+    width: 50px;
+} */
 
 .logo-image{
     width: 3rem;
     object-fit: contain;
 }
 
-.nav-links {
-  display: flex;
-  list-style: none;
-  gap: 1rem;
-}
-
-.nav-links li {
+.nav ul {
   margin: 0 1rem;
+  list-style: none;
+  display: flex;
+  gap: 1.5rem;
 }
 
-.nav-links a {
+.nav a {
   text-decoration: none;
   color: #333;
   transition: color 0.3s;
@@ -62,7 +63,7 @@ header {
   font-weight: 500;
 }
 
-.nav-links a:hover {
+.nav a:hover {
   color: #f44336;
 }
 
@@ -86,7 +87,7 @@ header {
     width: fit-content;
     display: flex;
     flex-wrap: wrap;
-    padding: 4rem;
+    padding: 115px 20px 50px;
     gap: 4rem;
 }
 
@@ -101,6 +102,7 @@ header {
 
 .hero-text p{
     margin: 10px 0;
+    padding-bottom: 5px;
 }
 
 .hero>.right{
@@ -224,6 +226,7 @@ footer {
   .skills-container,
   .project-container {
     flex-direction: column;
-    }  }
+    }  
+  }
 
 
